sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/Asset_Service_Item__c.object-meta.xml
<CustomObject>
    <description>Holds po items for sanergy assets maintenances</description>
    <label>Asset Service Item</label>
    <nameField>
        <displayFormat>ASI-{000000}</displayFormat>
        <label>Asset  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Service Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>