sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <formula>Purchase_Order_Item__r.Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>