sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Inventory item does not belong to fresh life</errorMessage>
        <filterItems>
            <field>Inventory_Item__c.Item_Company__r.lookup_ID__c</field>
            <operation>equals</operation>
            <value>a19D00000026xHv</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Asset Service Items</relationshipLabel>
    <relationshipName>Asset_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>