sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Inventory_Uom__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Uom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Inventory UoM</description>
    <label>Inventory Uom</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Asset Service Items</relationshipLabel>
    <relationshipName>Asset_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>