sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>