sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Purchase_Order_Item__r.Item_Description__c</formula>
    <label>Service Item_Description</label>
    <type>Text</type>
</CustomField>