sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Item_Descriptionss__c.field-meta.xml
<CustomField>
    <fullName>Item_Descriptionss__c</fullName>
    <label>Item Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>