sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>lookup to purchase order item</description>
    <label>Purchase Order Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Inventory_Item__c</field>
            <operation>equals</operation>
            <valueField>Purchase_Order_Item__c.Inventory_Item__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Purchase_Order_Item__c.Inventory_Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Inventory_Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Asset Service Items</relationshipLabel>
    <relationshipName>Asset_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>