sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/fields/vendor__c.field-meta.xml
<CustomField>
    <fullName>vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Service Items</relationshipLabel>
    <relationshipName>Asset_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>