sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/recordTypes/Inventory_Consumables.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Consumables</fullName>
    <active>true</active>
    <label>Inventory Consumables</label>
</RecordType>