sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/recordTypes/Purchased_Order_Items.recordType-meta.xml
<RecordType>
    <fullName>Purchased_Order_Items</fullName>
    <active>true</active>
    <label>Purchased Order Items</label>
</RecordType>