sfSandBoxCode/force-app/main/default/objects/Asset_Service_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Specifications__c</columns>
    <columns>Item_Descriptionss__c</columns>
    <columns>vendor__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>